--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -2,7 +2,7 @@ deploy:
   - kubectl apply -f frontend-deployment.yml
   - kubectl apply -f frontend-service.yml
   - kubectl apply -f redis-master-deployment.yml
-  - kubectl apply -f redis-master-service
+  - kubectl apply -f redis-master-service.yml
   - kubectl apply -f redis-slave-deployment.yml
-  - kubectl apply -f redis-slave-service
+  - kubectl apply -f redis-slave-service.yml
 
